refactor: moving query logic to trait, implement actions
