# app/Http/Controllers/API/RatioController.php
@@ -2,45 +2,35 @@
 
 namespace App\Http\Controllers\API;
 
-use App\Actions\GetFinancialStatement;
 use App\Http\Controllers\Controller;
-use App\Http\Requests\API\FinancialStatementRequest;
+use App\Http\Requests\API\RatioRequest;
 use App\Models\Mongo\Company;
-use App\Models\Mongo\FinancialStatement\Statement;
 use App\Utils\ApiResponse;
-use Illuminate\Http\Request;
 
-class FinancialStatementController extends Controller
+class RatioController extends Controller
 {
     /**
      * @OA\Get(
-     *      path="/api/symbols/{company}/financial-statements?type=1&year=2024&quarter=4&limit=1",
-     *      operationId="GetFinancialStatement",
+     *      path="/api/symbols/{company}/ratio?year=2024&quarter=4&limit=1",
+     *      operationId="GetFinancialRatios",
      *      tags={"Symbols"},
-     *      summary="Financial Statement",
-     *      description="Retrieve a specific type of financial statements for a company",
+     *      summary="Financial Metrics",
+     *      description="Retrieve a Financial Metrics and Ratios of a company",
      *      @OA\Parameter(
      *          description="Company Symbol",
      *          in="path",
      *          name="company",
+     *
      *          @OA\Schema(type="string"),
      *          @OA\Examples(example="Vietcombank", value="VCB", summary="Vietcomebank"),
      *          @OA\Examples(example="MB Bank", value="MBB", summary="MB Bank"),
      *          @OA\Examples(example="Vietnamilk", value="VNM", summary="Vietnamilk"),
      *      ),
      *      @OA\Parameter(
-     *          description="Statement type",
-     *          in="query",
-     *          name="type",
-     *          @OA\Schema(type="int"),
-     *          @OA\Examples(example="Balance Sheet", value="1", summary="Balance Sheet"),
-     *          @OA\Examples(example="Income Statement", value="2", summary="Income Statement"),
-     *          @OA\Examples(example="Cashflow Statement", value="3", summary="Cashflow Statement"),
-     *      ),
-     *      @OA\Parameter(
      *          description="Year",
      *          in="query",
      *          name="year",
+     *
      *          @OA\Schema(type="int"),
      *          @OA\Examples(example="Year", value="2024", summary="A year"),
      *      ),
@@ -48,6 +38,7 @@ class FinancialStatementController extends Controller
      *          description="Quarter value to query retrieve from a specific quarter or retrieve yearly statements",
      *          in="query",
      *          name="quarter",
+     *
      *          @OA\Schema(type="int"),
      *          @OA\Examples(example="First Quarter", value="1", summary="First Quarter"),
      *          @OA\Examples(example="Second Quarter", value="2", summary="Second Quarter"),
@@ -56,9 +47,10 @@ class FinancialStatementController extends Controller
      *          @OA\Examples(example="Yearly", value="0", summary="Yearly"),
      *      ),
      *      @OA\Parameter(
-     *          description="The amount of ratios to get. Max is 9",
+     *          description="The amount of statement to get. Max is 9",
      *          in="query",
      *          name="limit",
+     *
      *          @OA\Schema(type="int"),
      *          @OA\Examples(example="Limit", value="9", summary="Limit value"),
      *      ),
@@ -72,20 +64,13 @@ class FinancialStatementController extends Controller
      *       ),
      *      @OA\Response(
      *          response=404,
-     *          description="No ratio records found",
+     *          description="No statements found",
      *       ),
      *     )
      */
-    public function show(Company $company, FinancialStatementRequest $request, GetFinancialStatement $action)
+    public function show(Company $company, RatioRequest $request)
     {
-        $validated = $request->validated();
-
-        $result = $action->handle($validated, $company);
-        if (!$result) {
-            return ApiResponse::notFound('No statements found');
-        }
-
-        return ApiResponse::success($result);
+        return ApiResponse::success($company->metrics()->get());
     }
 
 }
